--- a/platformio.ini
+++ b/platformio.ini
@@ -13,5 +13,6 @@ platform = atmelavr
 board = megaatmega2560
 framework = arduino
 lib_deps = 
-	arduino-libraries/Ethernet@^2.0.2
 	adafruit/DHT sensor library@^1.4.6
+	arduino-libraries/Ethernet@^2.0.2
+	knolleary/PubSubClient@^2.8
