--- a/platformio.ini
+++ b/platformio.ini
@@ -16,3 +16,4 @@ lib_deps =
 	adafruit/DHT sensor library@^1.4.6
 	arduino-libraries/Ethernet@^2.0.2
 	knolleary/PubSubClient@^2.8
+	adafruit/Adafruit Unified Sensor@^1.1.15
